syntax = "proto3";

option csharp_namespace = "L4GRPCService";

package matrix;

service Matrix {
  rpc CalculateMatrix (MatrixRequest) returns (MatrixReply);
}

message MatrixRequest {
	repeated sint32 m = 1;
}

message MatrixReply {
  repeated sint32 m = 1;
}
